[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llasm"
version = "1.0.0"
description = "LLaSM: Large Language and Speech Model."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate",
    "aiohttp", #almj
    "anthropic==0.25.8", #almj
    "gitpython", #almj
    "jsonlines", #almj
    "lark", #almj
    "librosa",
    "matplotlib", #almj
    "numpy<2",
    "openai", #almj
    "protobuf",
    "pandas", #almj
    "pydantic", #almj
    "python-git", #almj
    "requests",
    "sentencepiece==0.1.99",
    "tenacity",
    "termcolor", #almj
    "tiktoken", #almj
    "tokenizers>=0.12.1",
    "torch", "torchvision",
    "transformers==4.31.0" 
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/LinkSoul/LLaSM"
"Bug Tracker" = "https://github.com/LinkSoul-AI/LLaSM/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
